--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "eslint-plugin-react-hooks": "^4.1.0",
     "eslint-plugin-unused-imports": "^1.1.0",
     "husky": "^6.0.0",
+    "lint-staged": "^10.5.4",
     "prettier": "2.2.1"
   }
 }
