--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "d3-ease": "^2.0.0",
     "date-fns": "^2.19.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -77,6 +78,7 @@
     "@storybook/node-logger": "^6.1.21",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.1.21",
+    "@types/d3-ease": "^2.0.0",
     "@types/react-map-gl": "^5.2.9",
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
