--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "eslint-plugin-unused-imports": "^1.1.0",
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
+    "pinst": "^2.1.6",
     "prettier": "2.2.1"
   }
 }
