--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^13.0.16",
     "@types/jest": "^26.0.15",
+    "@types/matter-js": "^0.14.11",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "d3": "^6.6.2",
     "d3-ease": "^2.0.0",
     "date-fns": "^2.19.0",
+    "matter-js": "^0.17.1",
     "query-string": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -22,6 +25,7 @@
     "react-query": "^3.13.3",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
+    "typeface-yantramanav": "^1.1.13",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -80,6 +84,7 @@
     "@storybook/node-logger": "^6.1.21",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.1.21",
+    "@types/d3": "^6.3.0",
     "@types/d3-ease": "^2.0.0",
     "@types/react-map-gl": "^5.2.9",
     "@types/styled-components": "^5.1.9",
@@ -97,5 +102,8 @@
     "lint-staged": "^10.5.4",
     "pinst": "^2.1.6",
     "prettier": "2.2.1"
+  },
+  "resolutions": {
+    "babel-loader": "8.1.0"
   }
 }
