--- a/package.json
+++ b/package.json
@@ -3,31 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/styles": "^4.11.3",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^13.0.16",
-    "@types/jest": "^26.0.15",
-    "@types/matter-js": "^0.14.11",
-    "@types/node": "^14.14.37",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "d3": "^6.6.2",
-    "d3-ease": "^2.0.0",
-    "date-fns": "^2.19.0",
+    "@mui/material": "^5.0.2",
+    "@mui/styled-engine-sc": "^5.0.0",
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
+    "babel-loader": "8.1.0",
+    "d3": "^7.0.4",
+    "d3-ease": "^3.0.1",
+    "date-fns": "^2.24.0",
     "matter-js": "^0.17.1",
     "query-string": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-map-gl": "^6.1.11",
-    "react-query": "^3.13.3",
+    "react-map-gl": "^6.1.17",
+    "react-query": "^3.24.4",
     "react-scripts": "4.0.3",
-    "styled-components": "^5.2.1",
+    "styled-components": "^5.3.1",
     "typeface-yantramanav": "^1.1.13",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "typescript": "^4.4.3",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -77,33 +70,42 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.1.21",
-    "@storybook/addon-essentials": "^6.1.21",
-    "@storybook/addon-links": "^6.1.21",
-    "@storybook/client-api": "^6.1.21",
-    "@storybook/node-logger": "^6.1.21",
-    "@storybook/preset-create-react-app": "^3.1.7",
-    "@storybook/react": "^6.1.21",
-    "@types/d3": "^6.3.0",
-    "@types/d3-ease": "^2.0.0",
-    "@types/react-map-gl": "^5.2.9",
-    "@types/styled-components": "^5.1.9",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
-    "eslint": "^7.7.0",
+    "@storybook/addon-actions": "^6.3.8",
+    "@storybook/addon-essentials": "^6.3.8",
+    "@storybook/addon-links": "^6.3.8",
+    "@storybook/client-api": "^6.3.8",
+    "@storybook/node-logger": "^6.3.8",
+    "@storybook/preset-create-react-app": "^3.2.0",
+    "@storybook/react": "^6.3.8",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^12.1.1",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/d3": "^7.0.0",
+    "@types/d3-ease": "^3.0.0",
+    "@types/jest": "^27.0.2",
+    "@types/matter-js": "^0.17.5",
+    "@types/node": "^16.10.1",
+    "@types/react": "^17.0.24",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-map-gl": "^6.1.0",
+    "@types/styled-components": "^5.1.14",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
+    "@typescript-eslint/parser": "^4.31.2",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.0",
     "eslint-plugin-react-hooks": "^4.1.0",
-    "eslint-plugin-unused-imports": "^1.1.0",
-    "husky": "^6.0.0",
-    "lint-staged": "^10.5.4",
+    "eslint-plugin-unused-imports": "^1.1.5",
+    "husky": "^7.0.2",
+    "lint-staged": "^11.1.2",
     "pinst": "^2.1.6",
-    "prettier": "2.2.1"
+    "prettier": "2.4.1"
   },
   "resolutions": {
-    "babel-loader": "8.1.0"
+    "babel-loader": "8.1.0",
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
   }
 }
