--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "dependencies": {
     "@mui/material": "^5.0.2",
-    "@mui/styled-engine-sc": "^5.0.0",
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
+    "@mui/styled-engine-sc": "^5.0.0",
+    "@types/string-hash": "^1.1.1",
     "babel-loader": "8.1.0",
     "d3": "^7.0.4",
     "d3-ease": "^3.0.1",
@@ -17,6 +18,7 @@
     "react-map-gl": "^6.1.17",
     "react-query": "^3.24.4",
     "react-scripts": "4.0.3",
+    "string-hash": "^1.1.3",
     "styled-components": "^5.3.1",
     "typeface-yantramanav": "^1.1.13",
     "typescript": "^4.4.3",
@@ -83,7 +85,7 @@
     "@types/d3": "^7.0.0",
     "@types/d3-ease": "^3.0.0",
     "@types/jest": "^27.0.2",
-    "@types/matter-js": "^0.17.5",
+    "@types/matter-js": "^0.17.6",
     "@types/node": "^16.10.1",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
