--- a/package.json
+++ b/package.json
@@ -3,26 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mui/material": "^5.0.2",
+    "@mui/material": "^5.2.6",
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
-    "@mui/styled-engine-sc": "^5.0.0",
+    "@mui/styled-engine-sc": "^5.1.0",
     "@types/string-hash": "^1.1.1",
-    "babel-loader": "8.1.0",
+    "babel-loader": "8.2.3",
     "d3": "^7.0.4",
     "d3-ease": "^3.0.1",
-    "date-fns": "^2.24.0",
-    "matter-js": "^0.17.1",
+    "date-fns": "^2.28.0",
+    "framer-motion": "^5.5.5",
+    "matter-js": "^0.18.0",
     "query-string": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-map-gl": "^6.1.17",
+    "react-map-gl": "^6.1.18",
     "react-query": "^3.24.4",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.0",
     "string-hash": "^1.1.3",
-    "styled-components": "^5.3.1",
+    "styled-components": "^5.3.3",
     "typeface-yantramanav": "^1.1.13",
-    "typescript": "^4.4.3",
-    "web-vitals": "^2.1.0"
+    "typescript": "^4.5.4",
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -77,34 +78,34 @@
     "@storybook/addon-links": "^6.3.8",
     "@storybook/client-api": "^6.3.8",
     "@storybook/node-logger": "^6.3.8",
-    "@storybook/preset-create-react-app": "^3.2.0",
+    "@storybook/preset-create-react-app": "^4.0.0",
     "@storybook/react": "^6.3.8",
-    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.1",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/d3": "^7.0.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/d3": "^7.1.0",
     "@types/d3-ease": "^3.0.0",
-    "@types/jest": "^27.0.2",
+    "@types/jest": "^27.0.3",
     "@types/matter-js": "^0.17.6",
-    "@types/node": "^16.10.1",
+    "@types/node": "^17.0.5",
     "@types/react": "^17.0.24",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-map-gl": "^6.1.0",
-    "@types/styled-components": "^5.1.14",
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
-    "eslint": "^7.32.0",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-map-gl": "^6.1.1",
+    "@types/styled-components": "^5.1.19",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
+    "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.0",
-    "eslint-plugin-react-hooks": "^4.1.0",
-    "eslint-plugin-unused-imports": "^1.1.5",
-    "husky": "^7.0.2",
-    "lint-staged": "^11.1.2",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.4",
     "pinst": "^2.1.6",
-    "prettier": "2.4.1"
+    "prettier": "2.5.1"
   },
   "resolutions": {
     "babel-loader": "8.1.0",
