--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@mui/material": "^5.2.6",
-    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
+    "@mui/styled-engine": "^5.1.0",
     "@mui/styled-engine-sc": "^5.1.0",
     "@types/string-hash": "^1.1.1",
     "babel-loader": "8.2.3",
