--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://cjoecker.github.io/personal-website/",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
     "@mui/material": "^5.2.6",
     "@mui/styled-engine": "^5.1.0",
     "@mui/styled-engine-sc": "^5.1.0",
